--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,8 @@
 <project name="Fifree2 CoreBundle" default="build">
     <target name="build"
             depends="prepare,
+                    composer-self-update,
+                    composer-run-install,
                     drop-database,
                     install-fifreecorebundle,
                     php-lint-ci, 
@@ -38,13 +40,13 @@
         <get src="https://getcomposer.org/composer.phar" dest="composer.phar"/>
     </target>
 
-    <target name="composer-update" depends="composer-install">
+    <target name="composer-self-update" depends="composer-install">
         <exec executable="php" failonerror="true">
             <arg line="composer.phar self-update"/>
         </exec>
     </target>
 
-    <target name="composer-run-install" depends="composer-update">
+    <target name="composer-run-install" depends="composer-self-update">
         <exec executable="php" failonerror="true">
             <arg line="composer.phar install"/>
         </exec>
