--- a/.travis.yml
+++ b/.travis.yml
@@ -49,8 +49,8 @@ addons:
 before_script:
   - sudo apt-get update
   - sudo apt-get install apache2 libapache2-mod-fastcgi make
-  - if [[ $TRAVIS_PHP_VERSION == "5.6" ]]; then yes | pecl install -f apcu-4.0.8; sudo phpenmod apcu; fi
-  - if [[ $TRAVIS_PHP_VERSION == "7.2" ]]; then yes | pecl install -f apcu; sudo phpenmod apcu; fi
+  - if [[ $TRAVIS_PHP_VERSION == "5.6" ]]; then yes | pecl install -f apcu-4.0.8; fi
+  - if [[ $TRAVIS_PHP_VERSION == "7.2" ]]; then yes | pecl install -f apcu; fi
   - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then phpenv config-add ./tests/build/travis.php.ini; fi
   - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then echo 'date.timezone = "Europe/Rome"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
   - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then sudo apt-get install -y --force-yes php5-dev php-pear php5-mysql php5-curl php5-gd php5-json php5-sqlite php5-pgsql; fi
