--- a/build.xml
+++ b/build.xml
@@ -53,14 +53,14 @@
     </target>
 
     <target name="drop-database">
-        <exec executable="tests/bin/console" failonerror="true">
-            <arg line="fifree2:dropdatabase --force --env=test"/>
+        <exec executable="php" failonerror="true">
+            <arg line="tests/bin/console fifree2:dropdatabase --force --env=test"/>
         </exec>
     </target>
     
     <target name="install-fifreecorebundle">
-        <exec executable="tests/bin/console" failonerror="true">
-            <arg line="fifree2:install admin admin admin@admin.it --env=test"/>
+        <exec executable="php" failonerror="true">
+            <arg line="tests/bin/console fifree2:install admin admin admin@admin.it --env=test"/>
         </exec>
     </target>
   
