--- a/.travis.yml
+++ b/.travis.yml
@@ -102,6 +102,7 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
+  - composer install
   - php tests/bin/console fifree2:dropdatabase --force --env=test
   - php tests/bin/console fifree2:install admin admin admin@admin.it --env=test
 
