--- a/build.xml
+++ b/build.xml
@@ -5,6 +5,8 @@
             depends="prepare,
                     composer-self-update,
                     composer-run-install,
+                    fifreecorebundle-drop-database,
+                    fifreecorebundle-install,
                     php-lint-ci, 
                     phpmd-ci, 
                     phpcs-ci, 
@@ -47,6 +49,18 @@
     <target name="composer-run-install" depends="composer-self-update">
         <exec executable="php" failonerror="true">
             <arg line="composer.phar install"/>
+        </exec>
+    </target>
+
+    <target name="fifreecorebundle-drop-database">
+        <exec executable="php" failonerror="true">
+            <arg line="tests/bin/console fifree2:dropdatabase --force --env=test"/>
+        </exec>
+    </target>
+    
+    <target name="fifreecorebundle-install">
+        <exec executable="php" failonerror="true">
+            <arg line="tests/bin/console fifree2:install admin admin admin@admin.it --env=test"/>
         </exec>
     </target>
   
