--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ before_script:
   - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]] ; then pecl channel-update pecl.php.net; fi;
   - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then echo 'date.timezone = "Europe/Rome"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
   - if [[ $TRAVIS_PHP_VERSION == "7.2" ]] ; then echo "yes" | pecl install channel://pecl.php.net/apcu || true; fi
+  - if [[ $TRAVIS_PHP_VERSION == "5.6" ]] ; then echo "yes" | pecl install apcu-4.0.11 || true; fi
   #- if [[ $TRAVIS_PHP_VERSION == "7.2" ]] ; then echo "yes" | pecl install channel://pecl.php.net/apcu_bc || true; fi
   - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then sudo apt-get install -y --force-yes php5-dev php-pear php5-mysql php5-curl php5-gd php5-json php5-sqlite php5-pgsql; fi
   - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
