--- a/.travis.yml
+++ b/.travis.yml
@@ -56,11 +56,12 @@ before_script:
   - if [[ $TRAVIS_PHP_VERSION == "7.2" ]] ; then echo "yes" | pecl install channel://pecl.php.net/apcu || true; fi
   - if [[ $TRAVIS_PHP_VERSION == "7.2" ]] ; then echo "yes" | pecl install channel://pecl.php.net/apcu_bc || true; fi
   - if [[ $TRAVIS_PHP_VERSION == "5.6" ]] ; then echo "yes" | pecl install apcu-4.0.11 || true; fi
-  
   - cat ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - cat ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
-  - sed -i '1d' ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-  - sed -i '1d' ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - if [[ $TRAVIS_PHP_VERSION == "7.2" ]] ; then sed -i '1d' ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi
+  - if [[ $TRAVIS_PHP_VERSION == "7.2" ]] ; then sed -i '1d' ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi
+  - if [[ $TRAVIS_PHP_VERSION == "7.2" ]] ; then phpenv config-add ./tests/build/ini/apc-7.ini; fi
+  - if [[ $TRAVIS_PHP_VERSION == "5.6" ]] ; then phpenv config-add ./tests/build/ini/apc-5.6.ini; fi
   - cat ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   #- if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then sudo apt-get install -y --force-yes php5-dev php-pear php5-mysql php5-curl php5-gd php5-json php5-sqlite php5-pgsql; fi
   - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
