included chromedriver - geckodriver

--- a/composer.json
+++ b/composer.json
@@ -63,21 +63,23 @@
         "friendsofsymfony/user-bundle": "~2.0"
     },
     "require-dev": {
-        "phpoffice/phpexcel": "^1.8",
-        "phpoffice/phpword": "^0.13.0",
-        "tecnickcom/tcpdf": "^6.2",
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^4.0",
-        "symfony/web-server-bundle": "3.4.*",
-        "satooshi/php-coveralls": "^2.0",
+        "enm1989/chromedriver": "^2.35",
+        "enm1989/geckodriver": "^0.19.1",
+        "facebook/webdriver": "^1.5",
         "mockery/mockery": "^0.9.5",
         "phpmd/phpmd": "^2.4",
+        "phpoffice/phpexcel": "^1.8",
+        "phpoffice/phpword": "^0.13.0",
+        "phpunit/phpcov": "^3.0|^4.0",
+        "satooshi/php-coveralls": "^2.0",
+        "se/selenium-server-standalone": "3.4.*",
         "sebastian/phpcpd": "^2.0",
+        "sensio/generator-bundle": "^3.0",
         "sensiolabs/security-checker": "^4.0",
         "squizlabs/php_codesniffer": "^2.7",
-        "se/selenium-server-standalone": "3.4.*",
-        "facebook/webdriver": "^1.5",
-        "phpunit/phpcov": "^3.0|^4.0"
+        "symfony/phpunit-bridge": "^4.0",
+        "symfony/web-server-bundle": "3.4.*",
+        "tecnickcom/tcpdf": "^6.2"
     },
     "suggest": {
         "ext-apcu": "The extension required to use cache"
