--- a/tests/app/config/config.yml
+++ b/tests/app/config/config.yml
@@ -3,6 +3,12 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
 
+parameters:
+    locale: it
+    appname: fifreecorebundle
+    appid_applicativo: 999
+    solosso: false
+
 framework:
     #esi:             ~
     #translator:      { fallbacks: ["%locale%"] }
@@ -25,6 +31,9 @@ framework:
         save_path: '%kernel.project_dir%/tests/var/sessions/%kernel.environment%'
     fragments:       ~
     http_method_override: true
+    assets: ~
+    php_errors:
+        log: true
     #Questo serve per fare la traduzione della FosUserBundle per le label di username, password, remember_me, ecc..
     translator: { fallback: "%locale%" } 
 
@@ -83,9 +92,3 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
-
-parameters:
-    locale: it
-    appname: fifreecorebundle
-    appid_applicativo: 999
-    solosso: false
