--- a/tests/app/config/config_test.yml
+++ b/tests/app/config/config_test.yml
@@ -4,18 +4,10 @@ imports:
 framework:
     test: ~
     session:
-        #storage_id: session.storage.native
         storage_id: session.storage.mock_file
     profiler:
         collect: false
     
-monolog:
-    handlers:
-        main:
-            type:   stream
-            path:   "%kernel.logs_dir%/%kernel.environment%.log"
-            level:  DEBUG
-
 web_profiler:
     toolbar: false
     intercept_redirects: false
@@ -26,7 +18,7 @@ swiftmailer:
 parameters:
     user4test: admin
     usernoprivileges4test: user4test
-    facebookdriver_url: "http://127.0.0.1:8000/app_test.php"
+    facebookdriver_url: "http://127.0.0.1:8000"
     facebookdriver_host: "http://localhost:4444/wd/hub"
     selenium_driver_type: "%browser4test%"
     browser_headless: false
