full refactor symdony 3.4

--- a/tests/app/config/parameters.yml
+++ b/tests/app/config/parameters.yml
@@ -13,5 +13,5 @@ parameters:
     mailer_password: null
     locale: it
     secret: ThisTokenIsNotSoSecretChangeIt
-    temascelto: sunny
+    temascelto: redmond
     browser4test: firefox
