--- a/src/Fi/CoreBundle/Resources/config/services.yml
+++ b/src/Fi/CoreBundle/Resources/config/services.yml
@@ -5,6 +5,12 @@ parameters:
   maintenanceLockFilePath: "%kernel.cache_dir%/maintenance.lock"  
   
 services:
+    fi.twig.fi_versione_extension:
+        class: Fi\CoreBundle\Twig\Extension\VersioneExtension
+        arguments: ['@service_container']
+        tags:
+          - { name: twig.extension }
+
     #Informazioni connessione database su Web Debug Toolbar
     data_collector.databaseinfo:
         class: Fi\CoreBundle\Collector\DatabaseInfoDataCollector
