--- a/.travis.yml
+++ b/.travis.yml
@@ -108,7 +108,8 @@ before_script:
   
 
 script:
-  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then ant; fi
+  #- if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then ant; fi
+  - ant
 
 after_success:
   - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/php-coveralls -v; fi
