--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
   #- 7.0
   #- 7.1
   - 7.2
-  - hhvm
+  - hhvm-3.24
 
 services:
   - mysql
@@ -13,7 +13,7 @@ services:
   
 matrix:
     allow_failures:
-        - php: hhvm
+        - php: hhvm-3.24
        # - php: 5.6
        #   env: BROWSER=chrome
        # - php: 7.0
@@ -49,6 +49,13 @@ addons:
 before_script:
   - sudo apt-get update
   - sudo apt-get install apache2 libapache2-mod-fastcgi make
+  
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then echo -e '\nhhvm.libxml.ext_entity_whitelist = "file,http,https"' | sudo tee -a /etc/hhvm/php.ini; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then echo -e '\nhhvm.enable_zend_compat=true' | sudo tee -a /etc/hhvm/php.ini; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then echo -e '\ndate.timezone = "Europe/Rome"' | sudo tee -a /etc/hhvm/php.ini; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then echo -e '\nhhvm.enable_hip_hop_syntax = true' | sudo tee -a /etc/hhvm/php.ini; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then curl -sSfL -o ~/.phpenv/versions/hhvm/bin/phpunit https://phar.phpunit.de/phpunit-5.7.phar; fi
+
   - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then phpenv config-add ./tests/build/travis.php.ini; fi
   - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]] ; then pecl channel-update pecl.php.net; fi;
   - if [[ $TRAVIS_PHP_VERSION == "7.2" ]] ; then echo "yes" | pecl install channel://pecl.php.net/apcu || true; fi
