--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/symfony": "3.4.4",
+        "symfony/symfony": "3.4.*",
         "twig/twig": "^1.0|^2.0",
         "friendsofsymfony/user-bundle": "~2.0"
     },
