--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,7 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0",
+        "symfony/phpunit-bridge": "^3.0|^4.0",
         "sensiolabs/security-checker": "^4.0",
         "se/selenium-server-standalone": "3.8.*",
         "symfony/web-server-bundle": "3.4.*",
