--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@
 # Assets and user uploads
 /tests/web/bundles/
 /tests/web/uploads/
+/tests/public/bundles/
+/tests/public/uploads/
 
 # PHPUnit
 /tests/app/phpunit.xml
@@ -46,3 +48,19 @@
 /vendor/
 /tests/app/dbtest.sqlite
 composer.lock
+
+###> symfony/framework-bundle ###
+.env
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
+
+###> symfony/web-server-bundle ###
+.web-server-pid
+###< symfony/web-server-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
