--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -15,11 +15,11 @@ auxiliary.org-netbeans-modules-php-symfony2.appDir-path=tests/app
 auxiliary.org-netbeans-modules-php-symfony2.enabled=true
 file.reference.tests-app=tests/app
 include.path=${php.global.include.path}
-php.version=PHP_56
+php.version=PHP_70
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=false
 test.src.dir=${file.reference.tests-app}
 testing.providers=PhpUnit
-web.root=tests/web
+web.root=tests/public
