--- a/build.xml
+++ b/build.xml
@@ -50,13 +50,13 @@
   
     <target name="fifreecorebundle-drop-database">
         <exec executable="php" failonerror="true">
-            <arg line="tests/bin/console fifree2:dropdatabase --force --env=test"/>
+            <arg line="bin/console fifree2:dropdatabase --force --env=test"/>
         </exec>
     </target>
     
     <target name="fifreecorebundle-install">
         <exec executable="php" failonerror="true">
-            <arg line="tests/bin/console fifree2:install admin admin admin@admin.it --env=test"/>
+            <arg line="bin/console fifree2:install admin admin admin@admin.it --env=test"/>
         </exec>
     </target>
   
