--- a/tools/phpunit/phpunit.xml.dist
+++ b/tools/phpunit/phpunit.xml.dist
@@ -38,7 +38,11 @@
     </testsuites>
     
     <php>
-        <server name="KERNEL_CLASS" value="AppKernel" />
+        <env name="KERNEL_CLASS" value="App\Kernel" />
+        <env name="APP_ENV" value="test" />
+        <env name="APP_DEBUG" value="1" />
+        <env name="APP_SECRET" value="s$cretf0rt3st" />
+        <env name="SHELL_VERBOSITY" value="-1" />
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="135" />
         <env name="BOOTSTRAP_CLEAR_CACHE_ENV" value="test" />
     </php>
