--- a/tests/app/config/packages/test/testdriver.yaml
+++ b/tests/app/config/packages/test/testdriver.yaml
@@ -1,7 +1,7 @@
 parameters:
     user4test: admin
     usernoprivileges4test: user4test
-    facebookdriver_url: "http://127.0.0.1:8000"
+    facebookdriver_url: "http://localhost:8000"
     facebookdriver_host: "http://localhost:4444/wd/hub"
     selenium_driver_type: firefox
     browser_headless: false
