--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
                     composer-run-install,
                     fifreecorebundle-drop-database,
                     fifreecorebundle-install,
+                    fifreecorebundle-assets,
                     php-lint-ci, 
                     phpmd-ci, 
                     phpcs-ci, 
@@ -50,13 +51,19 @@
   
     <target name="fifreecorebundle-drop-database">
         <exec executable="php" failonerror="true">
-            <arg line="bin/console fifree2:dropdatabase --force --env=test"/>
+            <arg line="bin/console fifree2:dropdatabase --force"/>
         </exec>
     </target>
     
     <target name="fifreecorebundle-install">
         <exec executable="php" failonerror="true">
-            <arg line="bin/console fifree2:install admin admin admin@admin.it --env=test"/>
+            <arg line="bin/console fifree2:install admin admin admin@admin.it"/>
+        </exec>
+    </target>
+  
+    <target name="fifreecorebundle-assets">
+        <exec executable="php" failonerror="true">
+            <arg line="bin/console assets:install --symlink --relative tests/public"/>
         </exec>
     </target>
   
