--- a/.travis.yml
+++ b/.travis.yml
@@ -127,7 +127,7 @@ after_failure:
   - sudo cat /var/log/apache2/fifree_access.log
   - sudo cat $TRAVIS_BUILD_DIR/build/artifacts/logs/selenium2.log
   - sudo cat $TRAVIS_BUILD_DIR/build/artifacts/logs/webserver.log
-  #- sudo cat /tmp/screenshot.png
+  - sudo cat /tmp/screenshot.txt
   #- sudo cat $TRAVIS_BUILD_DIR/tests/var/logs/test/test.log
 
 notifications:
