--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -13,6 +13,7 @@ auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_phpunit_2e_only=false
 auxiliary.org-netbeans-modules-php-smarty.smarty-framework=true
 auxiliary.org-netbeans-modules-php-symfony2.appDir-path=tests/app
 auxiliary.org-netbeans-modules-php-symfony2.enabled=true
+file.reference.FifreeCoreBundle-tests=tests
 file.reference.tests-app=tests/app
 include.path=${php.global.include.path}
 php.version=PHP_70
@@ -20,6 +21,6 @@ source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=false
-test.src.dir=${file.reference.tests-app}
+test.src.dir=${file.reference.FifreeCoreBundle-tests}
 testing.providers=PhpUnit
 web.root=tests/public
