fix case menu applicazione

--- a/src/Fi/CoreBundle/Resources/config/validation.yml
+++ b/src/Fi/CoreBundle/Resources/config/validation.yml
@@ -29,7 +29,7 @@ Fi\CoreBundle\Entity\Ffsecondaria:
         #data:
         #    - GreaterThan: today
 
-Fi\CoreBundle\Entity\menuApplicazione:
+Fi\CoreBundle\Entity\MenuApplicazione:
     properties:
         nome:
             - NotBlank: ~
