Revert "Merge branch 'master' into 3.0"
This reverts commit a5116cac0eff3c23369f762dccc52e9063f23e48, reversing
changes made to b060bc71eac15c47fec3776c847746686be9163c.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -13,14 +13,13 @@ auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_phpunit_2e_only=false
 auxiliary.org-netbeans-modules-php-smarty.smarty-framework=true
 auxiliary.org-netbeans-modules-php-symfony2.appDir-path=tests/app
 auxiliary.org-netbeans-modules-php-symfony2.enabled=true
-file.reference.FifreeCoreBundle-tests=tests
 file.reference.tests-app=tests/app
 include.path=${php.global.include.path}
-php.version=PHP_70
+php.version=PHP_56
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=false
-test.src.dir=${file.reference.FifreeCoreBundle-tests}
+test.src.dir=${file.reference.tests-app}
 testing.providers=PhpUnit
-web.root=tests/public
+web.root=tests/web
