Aggiunto giorno della settimana in ffsecondaria

--- a/src/Fi/CoreBundle/Resources/config/doctrine/Ffsecondaria.orm.yml
+++ b/src/Fi/CoreBundle/Resources/config/doctrine/Ffsecondaria.orm.yml
@@ -22,6 +22,9 @@ Fi\CoreBundle\Entity\Ffsecondaria:
         intero:
             type: integer
             nullable: true
+        giornodellasettimana:
+            type: integer
+            nullable: true
         importo:
             type: float
             precision: 10
