try upgrading dependencies

--- a/composer.json
+++ b/composer.json
@@ -41,18 +41,20 @@
     },
     "require": {
         "php": ">=7.2",
-        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-bundle": "^1.9",
         "fi/osbundle": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0",
         "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
         "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
-        "sensio/distribution-bundle": "^5.0.19",
+        "phpoffice/phpexcel": "^1.8",
+        "sensio/distribution-bundle": "^5.0",
         "symfony/asset": "3.4.*",
         "symfony/console": "3.4.*",
         "symfony/dotenv": "3.4.*",
         "symfony/flex": "^1.0",
         "symfony/form": "3.4.*",
         "symfony/lock": "3.4.*",
+        "symfony/maker-bundle": "^1.7",
         "symfony/monolog-bundle": "^3.2",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "3.4.*",
@@ -60,19 +62,17 @@
         "symfony/translation": "3.4.*",
         "symfony/twig-bundle": "3.4.*",
         "symfony/validator": "3.4.*",
-        "symfony/maker-bundle": "1.5.*",
         "symfony/yaml": "3.4.*",
-        "tecnickcom/tcpdf": "^6.2",
-        "phpoffice/phpexcel": "^1.8"
+        "tecnickcom/tcpdf": "^6.2"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "enm1989/chromedriver": "^2.35",
-        "enm1989/geckodriver": "^0.19.1",
-        "facebook/webdriver": "^1.5",
+        "enm1989/chromedriver": "^2.42",
+        "enm1989/geckodriver": "^0.20.0",
+        "facebook/webdriver": "^1.6",
         "mockery/mockery": "^0.9.5",
-        "phpmd/phpmd": "^2.6",
         "php-coveralls/php-coveralls": "^2.0",
+        "phpmd/phpmd": "^2.6",
         "se/selenium-server-standalone": "3.8.*",
         "sebastian/phpcpd": "^3.0",
         "sensiolabs/security-checker": "^4.0",
